--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-hook-form": "^7.59.0",
     "react-router-dom": "^6.20.1",
     "recharts": "^2.8.0",
+    "sonner": "^2.0.7",
     "web-vitals": "^5.0.3",
     "zod": "^3.25.67",
     "zustand": "^4.4.7"
