--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@tanstack/react-query-devtools": "^5.81.5",
     "@types/crypto-js": "^4.2.2",
     "@types/js-cookie": "^3.0.6",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.16",
@@ -30,6 +32,7 @@
     "lucide-react": "^0.344.0",
     "notivue": "^2.4.5",
     "notyf": "^3.10.0",
+    "ogl": "^1.0.11",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
@@ -37,6 +40,8 @@
     "react-router-dom": "^6.20.1",
     "recharts": "^2.8.0",
     "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "web-vitals": "^5.0.3",
     "zod": "^3.25.67",
     "zustand": "^4.4.7"
